Adds flag --enable-feature=memory-snapshot-on-shutdown
This is an experimental feature which is supposed to make startups
faster. This is running in the platform cluster and seems to work as
advertised.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -56,7 +56,8 @@ spec:
                "--storage.tsdb.path=/prometheus",
                "--storage.tsdb.retention.time=120d",
                "--web.enable-lifecycle",
-               "--web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net"]
+               "--web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net",
+               "--enable-feature=memory-snapshot-on-shutdown"]
         ports:
           - containerPort: 9090
         resources:
