Enables feature memory-snapshot-on-shutdown in dataproc
This is added to prometheus-federation and platform cluster already.

--- a/k8s/data-processing/deployments/prometheus.yml
+++ b/k8s/data-processing/deployments/prometheus.yml
@@ -64,7 +64,8 @@ spec:
         args: ["--config.file=/etc/prometheus/prometheus.yml",
                "--storage.tsdb.retention.time=120d",
                "--storage.tsdb.path=/data",
-               "--web.enable-lifecycle"]
+               "--web.enable-lifecycle",
+               "--enable-feature=memory-snapshot-on-shutdown"]
         ports:
           - containerPort: 9090
         resources:
