--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -23,7 +23,7 @@ FROM (
     SELECT "sidestream/web100" AS datatype, MIN(parse_time) AS min_parse_time
     FROM   `{{PROJECT}}.sidestream.web100`
   UNION ALL
-    SELECT "utilization/switch" AS datatype, MIN(parse_time) AS min_parse_time
+    SELECT "utilization/switch" AS datatype, MIN(Parser.Time) AS min_parse_time
     FROM   `{{PROJECT}}.utilization.switch`
   UNION ALL
     SELECT "ndt/traceroute" AS datatype, MIN(ParseInfo.ParseTime) AS min_parse_time
