--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -52,14 +52,32 @@ WITH all_types AS (
     `{{PROJECT}}.raw_ndt.scamper1`
   WHERE
     date > date('2019-03-28')
+),
+
+processed_types AS (
+  SELECT
+    datatype,
+    COUNT(distinct date) AS value_throughput
+  FROM
+    all_types
+  WHERE
+    (parseTime BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR) AND CURRENT_TIMESTAMP())
+    AND date < DATE_SUB(DATE(parseTime), INTERVAL 1 DAY) -- exclude daily.
+  GROUP BY
+    datatype
 )
 
 SELECT
-  datatype, COUNT(distinct date) AS value_throughput
+  datatype, value_throughput
+FROM processed_types
+UNION ALL
+-- export 0 throughput for data types that were not processed
+SELECT
+  all_types.datatype, 0 AS value_throughput
 FROM
-  all_types
+  all_types LEFT JOIN processed_types
+  ON (all_types.datatype = processed_types.datatype)
 WHERE
-  (parseTime BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR) AND CURRENT_TIMESTAMP())
-  AND date < DATE_SUB(CURRENT_DATE(), INTERVAL 1 DAY) -- exclude daily.
+  processed_types.datatype IS NULL
 GROUP BY
   datatype
