--- a/k8s/data-processing/deployments/kube-state-metrics.yml
+++ b/k8s/data-processing/deployments/kube-state-metrics.yml
@@ -11,7 +11,6 @@ spec:
     metadata:
       labels:
         application: kube-state-metrics
-        version: "v1.2.0"
       annotations:
         prometheus.io/scrape: 'true'
     spec:
@@ -19,6 +18,6 @@ spec:
         prometheus-node: 'true'
       containers:
       - name: kube-state-metrics
-        image: quay.io/coreos/kube-state-metrics:v1.2.0
+        image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.2.4
         ports:
         - containerPort: 8080
