Fixes retired kube-state-metrics flag

--- a/k8s/prometheus-federation/deployments/kube-state-metrics.yml
+++ b/k8s/prometheus-federation/deployments/kube-state-metrics.yml
@@ -21,7 +21,7 @@ spec:
       - name: kube-state-metrics
         image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.2.4
         args: [
-          "--collectors=deployments,nodes,pods,services",
+          "--resources=deployments,nodes,pods,services",
           "--port=8080",
         ]
         ports:
