--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -341,8 +341,10 @@ enabled = false
 
 #################################### Alerting ######################################
 [alerting]
-# Makes it possible to turn off alert rule execution.
-;execute_alerts = true
+enabled = false
+
+[unified_alerting]
+enabled = false
 
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /api/metrics
