Explicitly disables Google OAuth login

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -208,7 +208,7 @@ signout_redirect_url = "https://<host>/oauth2/sign_out"
 
 #################################### Google Auth ##########################
 [auth.google]
-;enabled = true
+enabled = false
 ;allow_sign_up = true
 ;allowed_domains = measurementlab.net google.com northeastern.edu
 ;client_id = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_ID>
