--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -179,7 +179,7 @@ auto_assign_org_role = Viewer
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
 disable_login_form = true
-oauth_auto_login = true
+;oauth_auto_login = true
 signout_redirect_url = "https://<host>/oauth2/sign_out"
 
 #################################### Anonymous Auth ##########################
