Explicitly disable all oauth providers but one

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -179,7 +179,7 @@ auto_assign_org_role = Viewer
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
 disable_login_form = true
-;oauth_auto_login = true
+oauth_auto_login = true
 signout_redirect_url = "https://<host>/oauth2/sign_out"
 
 #################################### Anonymous Auth ##########################
@@ -193,53 +193,27 @@ signout_redirect_url = "https://<host>/oauth2/sign_out"
 # specify role for unauthenticated users
 ;org_role = Viewer
 
-#################################### Github Auth ##########################
+#################################### OAuth Providers ##########################
 [auth.github]
-;enabled = false
-;allow_sign_up = true
-;client_id = some_id
-;client_secret = some_secret
-;scopes = user:email,read:org
-;auth_url = https://github.com/login/oauth/authorize
-;token_url = https://github.com/login/oauth/access_token
-;api_url = https://api.github.com/user
-;team_ids =
-;allowed_organizations =
-
-#################################### Google Auth ##########################
-[auth.google]
 enabled = false
-;allow_sign_up = true
-;allowed_domains = measurementlab.net google.com northeastern.edu
-;client_id = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_ID>
-;client_secret = <set via environment variable: GF_AUTH_GOOGLE_CLIENT_SECRET>
-;scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
-;auth_url = https://accounts.google.com/o/oauth2/auth
-;token_url = https://accounts.google.com/o/oauth2/token
-;api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
-#################################### Generic OAuth ##########################
+[auth.gitlab]
+enabled = true
+
+[auth.google]
+enabled = true
+
 [auth.generic_oauth]
-;enabled = false
-;name = OAuth
-;allow_sign_up = true
-;client_id = some_id
-;client_secret = some_secret
-;scopes = user:email,read:org
-;auth_url = https://foo.bar/login/oauth/authorize
-;token_url = https://foo.bar/login/oauth/access_token
-;api_url = https://foo.bar/user
-;team_ids =
-;allowed_organizations =
+enabled = false
 
-#################################### Grafana.net Auth ####################
 [auth.grafananet]
-;enabled = false
-;allow_sign_up = true
-;client_id = some_id
-;client_secret = some_secret
-;scopes = user:email
-;allowed_organizations =
+enabled = false
+
+[auth.azuread]
+enabled = false
+
+[auth.okta]
+enabled = false
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
