--- a/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
@@ -11,7 +11,8 @@ datasources:
   url: https://prometheus-platform-cluster-basicauth.mlab-oti.measurementlab.net
   basicAuth: true
   basicAuthUser: {{PLATFORM_PROM_AUTH_USER}}
-  basicAuthPassword: {{PLATFORM_PROM_AUTH_PASS}}
+  secureJsonData:
+    basicAuthPassword: {{PLATFORM_PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: false
