--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-sandbox.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-sandbox.yml.template
@@ -1,28 +1,17 @@
 # config file version
 apiVersion: 1
 
-# list of datasources to insert/update depending
-# what's available in the database
 datasources:
-  # <string, required> name of the datasource. Required
 - name: Prometheus (mlab-sandbox)
-  # <string, required> datasource type. Required
   type: prometheus
-  # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
   access: proxy
-  # <int> org id. will default to orgId 1 if not specified
   orgId: 1
-  # <string> url
   url: https://prometheus-basicauth.mlab-sandbox.measurementlab.net
-  # <bool> enable/disable basic auth
   basicAuth: true
-  # <string> basic auth username
   basicAuthUser: {{PROM_AUTH_USER}}
-  # <string> basic auth password
-  basicAuthPassword: {{PROM_AUTH_PASS}} 
-  # <bool> mark as default datasource. Max one per org
+  secureJsonData:
+    basicAuthPassword: {{PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
-  # <bool> allow users to edit datasources from the UI.
   editable: false
 
