--- a/k8s/data-processing/deployments/prometheus.yml
+++ b/k8s/data-processing/deployments/prometheus.yml
@@ -29,7 +29,7 @@ spec:
       # TODO: remove this directive after deployment to prod.
       initContainers:
       - name: reset-perms
-        image: busybox
+        image: busybox:1.34
         command: ['chown', '-R', '65534:65534', '/work-dir/prometheus-data2', '/work-dir/legacy-targets']
         volumeMounts:
         - mountPath: /work-dir
