--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -840,7 +840,7 @@ groups:
 # GardenerHistoricalThroughputIsStalled fires when historical reprocessing for
 # datatypes under processing by the v2 pipeline falls below 1 date / day.
 # The bq_gardener_historical_throughput metric is under the bigquery exporter 3h
-# deployment, so the timeout for this alert is 3 hours and 10 minutes.
+# deployment, so the timeout for this alert is 4 hours.
   - alert: GardenerHistoricalThroughputIsStalled
     expr: |
       increase(gardener_jobs_total{status="success", daily="false"}[1d]) > 0
