Change etl_task_total to etl_test_total

--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -41,8 +41,8 @@ groups:
   # This rule optimizes the alert query used for ParserDailyVolumeTooLow. Rather
   # than calculate multi-day values continuously, this rule will maintain a history
   # of the precalculated value needed by the rule.
-  - record: candidate_service:etl_test_count:increase24h
-    expr: sum by(service) (increase(etl_test_count{service!~".*batch.*",status="ok"}[1d]))
+  - record: candidate_service:etl_test_total:increase24h
+    expr: sum by(service) (increase(etl_test_total{service!~".*batch.*",status="ok"}[1d]))
 
   # Calculates the daily increase of GCS files for all datatypes.
   # NOTE: increase() appears to add an addition 8-10 archives over reality.
