--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -666,12 +666,12 @@ groups:
 # the delay dimension.
   - alert: ParserDailyVolumeTooLow
     expr: |
-      candidate_service:etl_test_count:increase24h
+      candidate_service:etl_test_total:increase24h
         < (0.7 * quantile by(service)(0.5,
-          label_replace(candidate_service:etl_test_count:increase24h offset 1d, "delay", "1d", "", ".*") or
-          label_replace(candidate_service:etl_test_count:increase24h offset 3d, "delay", "3d", "", ".*") or
-          label_replace(candidate_service:etl_test_count:increase24h offset 5d, "delay", "5d", "", ".*") or
-            label_replace(candidate_service:etl_test_count:increase24h offset 1w, "delay", "7d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 1d, "delay", "1d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 3d, "delay", "3d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 5d, "delay", "5d", "", ".*") or
+            label_replace(candidate_service:etl_test_total:increase24h offset 1w, "delay", "7d", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "etl-disco-parser", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "etl-disco-parser", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "etl-ndt-parser", "", ".*") or
@@ -891,9 +891,9 @@ groups:
 # ParserFailureRateTooHighOrMissing fires when the number of failed parser tasks
 # in the last hour rises above 1% or the number of total tasks is not reported.
   - alert: ParserFailureRateTooHighOrMissing
-    expr: (sum(rate(etl_task_total{status!="OK", cluster="data-processing"}[1h])) by (table) /
-      sum(rate(etl_task_total{cluster="data-processing"}[1h])) by (table)) > 0.01
-      OR absent(etl_task_total{cluster="data-processing"})
+    expr: (sum(rate(etl_test_total{status!="OK", cluster="data-processing"}[1h])) by (table) /
+      sum(rate(etl_test_total{cluster="data-processing"}[1h])) by (table)) > 0.01
+      OR absent(etl_test_total{cluster="data-processing"})
     for: 10m
     labels:
       repo: dev-tracker
