--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -397,7 +397,7 @@ scrape_configs:
         - 'kubelet_volume_stats_capacity_bytes{persistentvolumeclaim="auto-prometheus-ssd0"}'
         - 'gardener_jobs_total'
         - 'gardener_config_datatypes'
-        - 'etl_task_total'
+        - 'etl_test_total'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
 
