--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -666,12 +666,12 @@ groups:
 # the delay dimension.
   - alert: ParserDailyVolumeTooLow
     expr: |
-      candidate_service:etl_test_count:increase24h
+      candidate_service:etl_test_total:increase24h
         < (0.7 * quantile by(service)(0.5,
-          label_replace(candidate_service:etl_test_count:increase24h offset 1d, "delay", "1d", "", ".*") or
-          label_replace(candidate_service:etl_test_count:increase24h offset 3d, "delay", "3d", "", ".*") or
-          label_replace(candidate_service:etl_test_count:increase24h offset 5d, "delay", "5d", "", ".*") or
-            label_replace(candidate_service:etl_test_count:increase24h offset 1w, "delay", "7d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 1d, "delay", "1d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 3d, "delay", "3d", "", ".*") or
+          label_replace(candidate_service:etl_test_total:increase24h offset 5d, "delay", "5d", "", ".*") or
+            label_replace(candidate_service:etl_test_total:increase24h offset 1w, "delay", "7d", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "etl-disco-parser", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "etl-disco-parser", "", ".*") or
             label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "etl-ndt-parser", "", ".*") or
