--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -25,6 +25,7 @@ FROM (
   UNION ALL
     SELECT "utilization/switch" AS datatype, MIN(Parser.Time) AS min_parse_time
     FROM   `{{PROJECT}}.utilization.switch`
+    WHERE date > DATE('2015-11-19')
   UNION ALL
     SELECT "ndt/traceroute" AS datatype, MIN(ParseInfo.ParseTime) AS min_parse_time
     FROM   `{{PROJECT}}.ndt_raw.traceroute_legacy`
