Update bq exporter queries to use the v2 switch datatype (#880)
* Update bq_ndt_s2c query to use the new switch schema

* Update table name

* Update gardener_parse_time template to use the new utilization.switch table

* Update queries

* Use bq fields capitalization in queries.

* Merge branch 'master' into sandbox-roberto-bqexporter-query-update

* Revert changes to bq_ndt_s2c.sql

* Merge branch 'master' into sandbox-roberto-bqexporter-query-update

* Merge branch 'sandbox-roberto-bqexporter-query-update' of github.com:m-lab/prometheus-support into sandbox-roberto-bqexporter-query-update

--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -107,6 +107,16 @@ WITH all_types AS (
   FROM
     `{{PROJECT}}.ndt.scamper1`
   WHERE date > date('2019-03-28')
+  UNION ALL
+  SELECT
+    "raw_utilization.switch" AS datatype,
+    id,
+    date,
+    parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_utilization.switch`
+  WHERE
+    date > date('2015-11-19')
 ),
 
 basic_stats AS (
