--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -62,6 +62,16 @@ WITH all_types AS (
     `{{PROJECT}}.raw_ndt.scamper1`
   WHERE
     date > date('2019-03-28')
+  UNION ALL
+  SELECT
+    "raw_utilization.switch" AS datatype,
+    id,
+    date,
+    parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_utilization.switch`
+  WHERE
+    date > date('2015-11-19')
 ),
 
 processed_types AS (
