--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -23,8 +23,9 @@ FROM (
     SELECT "sidestream/web100" AS datatype, MIN(parse_time) AS min_parse_time
     FROM   `{{PROJECT}}.sidestream.web100_legacy`
   UNION ALL
-    SELECT "utilization/switch" AS datatype, MIN(parse_time) AS min_parse_time
-    FROM   `{{PROJECT}}.utilization.switch_legacy`
+    SELECT "utilization/switch" AS datatype, MIN(parser.Time) AS min_parse_time
+    FROM   `{{PROJECT}}.utilization.switch`
+    WHERE date > DATE('2015-11-19')
   UNION ALL
     SELECT "ndt/traceroute" AS datatype, MIN(ParseInfo.ParseTime) AS min_parse_time
     FROM   `{{PROJECT}}.ndt_raw.traceroute_legacy`
