Change datatype name in bq_gardener_historical query to "switch".
This name should match the name in Gardener, to prevent an inventory alert
from firing.

--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -64,7 +64,7 @@ WITH all_types AS (
     date > date('2019-03-28')
   UNION ALL
   SELECT
-    "raw_utilization.switch" AS datatype,
+    "switch" AS datatype,
     id,
     date,
     parser.Time as parseTime,
