Join on machine label instead of node label
The node label already exists in the metric and is inserted there by
GCP, and reflects a GKE node. I was unable to plumb the M-Lab node name
through to the node label. However, I was able to plumb a "machine"
label through, and almost all of our metrics contain both "node" and
"machine" labels with same value.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -556,13 +556,10 @@ groups:
   - alert: PlatformCluster_ContainerLogsMissingInStackdriver
     expr: |
       kube_node_status_condition{condition="Ready", status="true", node=~"mlab[1-4].*"} == 1
-        unless on(node) label_replace(
-          sum_over_time(
-            stackdriver_generic_node_logging_googleapis_com_user_platform_cluster_container_logs
-          [1h]),
-          "node", "$1", "node_id", "(.*)"
-        )
-        unless on(node) gmx_machine_maintenance == 1
+        unless on(machine) sum_over_time(
+          stackdriver_generic_node_logging_googleapis_com_user_platform_cluster_container_logs
+        [1h])
+        unless on(machine) gmx_machine_maintenance == 1
     for: 24h
     labels:
       repo: ops-tracker
