Complete inventory query for tcpinfo

--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -72,6 +72,15 @@ WITH all_types AS (
     `{{PROJECT}}.raw_utilization.switch`
   WHERE
     date > date('2015-11-19')
+  SELECT
+   "tcpinfo" AS datatype,
+   id,
+   date,
+   parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_ndt.tcpinfo`
+  WHERE
+    date > DATE('2019-01-01')
 ),
 
 processed_types AS (
