Fix UNION ALL for tcpinfo

--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -72,6 +72,7 @@ WITH all_types AS (
     `{{PROJECT}}.raw_utilization.switch`
   WHERE
     date > date('2015-11-19')
+  UNION ALL
   SELECT
    "tcpinfo" AS datatype,
    id,
