Add tcpinfo to bq_gardener queries

--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -117,6 +117,26 @@ WITH all_types AS (
     `{{PROJECT}}.raw_utilization.switch`
   WHERE
     date > date('2015-11-19')
+  UNION ALL
+  SELECT
+   "raw_ndt.tcpinfo" AS datatype,
+   id,
+   date,
+   parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.raw_ndt.tcpinfo`
+  WHERE
+    date > DATE('2019-01-01')
+  UNION ALL
+  SELECT
+   "ndt.tcpinfo" AS datatype,
+   id,
+   date,
+   parser.Time as parseTime,
+  FROM
+    `{{PROJECT}}.ndt.tcpinfo`
+  WHERE
+    date > DATE('2019-01-01')
 ),
 
 basic_stats AS (
