Add file failure rate graph

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -398,6 +398,7 @@ scrape_configs:
         - 'gardener_jobs_total'
         - 'gardener_config_datatypes'
         - 'etl_task_total'
+        - 'etl_test_total'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
 
