--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -23,8 +23,8 @@ FROM (
     SELECT "sidestream/web100" AS datatype, MIN(parse_time) AS min_parse_time
     FROM   `{{PROJECT}}.sidestream.web100_legacy`
   UNION ALL
-    SELECT "ndt/traceroute" AS datatype, MIN(ParseInfo.ParseTime) AS min_parse_time
-    FROM   `{{PROJECT}}.ndt_raw.traceroute_legacy`
+    SELECT "ndt/paris1" AS datatype, MIN(ParseInfo.ParseTime) AS min_parse_time
+    FROM   `{{PROJECT}}.ndt_raw.paris1_legacy`
   UNION ALL
     SELECT "utilization/switch" AS datatype, MIN(parser.Time) AS min_parse_time
     FROM   `{{PROJECT}}.utilization.switch`
