Name deployment correctly

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-discuss.yaml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-discuss.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bigquery-exporter-5m
+  name: bigquery-exporter-discuss
 spec:
   replicas: 1
   selector:
