--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -963,7 +963,7 @@ groups:
         deployments. The daily and batch parsers may also be affected.
 
 # NDT_AsnAnnotationRatioTooLowOrMissing fires when the client annotations on NDT
-# tests appears to have too many failures or the bq_ndt_annotation_* metrics
+# tests appear to have too many failures or the bq_ndt_annotation_* metrics
 # disappear.
   - alert: NDT_AsnAnnotationRatioTooLowOrMissing
     expr: |
@@ -980,7 +980,7 @@ groups:
         deployments. The daily and batch parsers may also be affected.
 
 # NDT_GeoAnnotationRatioTooLowOrMissing fires when the client annotations on NDT
-# tests (or sidecars) appears to have too many failures or the bq_annotation_* metrics
+# tests (or sidecars) appear to have too many failures or the bq_annotation_* metrics
 # disappear.
   - alert: NDT_GeoAnnotationRatioTooLowOrMissing
     expr: |
