Add cluster label

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1235,6 +1235,7 @@ groups:
     labels:
       repo: dev-tracker
       severity: ticket
+      cluster: prometheus-federation
     annotations:
       summary: Queries run by discuss@ users may be broken or return zero results.
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#pipeline_dailydiscussaccesszeroormissing
