Appends -oauth to Secret names for OAuth2 Ingresses
cert-manager will complain if we request a certificate for two different
Ingress resources that share a Secret name. It will log this message:

> certificate resource is not owned by this object. refusing to update
> non-owned certificate resource for object # Please enter the commit
> message for your changes. Lines starting

For oauth redirect Ingresses, this commit appends "-oauth" to the end of
the secretName.

--- a/k8s/prometheus-federation/services/grafana-tls-oauth.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-oauth.yml
@@ -13,7 +13,7 @@ spec:
   tls:
   - hosts:
     - grafana.{{GCLOUD_PROJECT}}.measurementlab.net
-    secretName: grafana-tls
+    secretName: grafana-tls-oauth
   rules:
   - host: grafana.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
