--- a/k8s/prometheus-federation/services/prometheus-tls-oauth.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-oauth.yml
@@ -13,7 +13,7 @@ spec:
   tls:
   - hosts:
     - prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
-    secretName: prometheus-tls
+    secretName: prometheus-tls-oauth
   rules:
   - host: prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
