Updates Ingress resource API versions
This also entailed removing a deprecated annotation in favor of the new
ingressClassName field in the spec.

--- a/k8s/prometheus-federation/services/prometheus-tls-basic.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-basic.yml
@@ -1,17 +1,17 @@
 # This ingress allows HTTP basic authentication on the /basic subpath, to allow
 # for easier machine access to Prometheus.
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prometheus-tls-basic
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
+  ingressClassName: "nginx"
   tls:
   - hosts:
     - prometheus-basicauth.{{GCLOUD_PROJECT}}.measurementlab.net
