--- a/k8s/prometheus-federation/services/alertmanager-tls-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-service.yml
@@ -18,18 +18,18 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alertmanager-tls
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
+  ingressClassName: "nginx"
   tls:
   - hosts:
     - alertmanager.{{GCLOUD_PROJECT}}.measurementlab.net
