Properly specifies Ingress backend services
The backend Ingress services were not properly specified for the updated
API version.

--- a/k8s/prometheus-federation/services/alertmanager-tls-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-service.yml
@@ -40,5 +40,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: alertmanager-tls-service
-          servicePort: 9093
+          service:
+            name: alertmanager-tls-service
+            port:
+              number: 9093
+
