--- a/k8s/prometheus-federation/services/gmx-tls-service.yml
+++ b/k8s/prometheus-federation/services/gmx-tls-service.yml
@@ -36,6 +36,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: gmx-tls-service
-          servicePort: 9999
+          service:
+            name: gmx-tls-service
+            port:
+              number: 9999
 
