--- a/k8s/prometheus-federation/services/prometheus-tls-basic.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-basic.yml
@@ -22,5 +22,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: prometheus-tls-service
-          servicePort: 9090
+          service:
+            name: prometheus-tls-service
+            port:
+              number: 9090
+
