--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -34,5 +34,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: reboot-api-tls-service
-          servicePort: 8080
+          service:
+            name: reboot-api-tls-service
+            port:
+              number: 8080
+
