--- a/k8s/prometheus-federation/services/prometheus-tls-oauth.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-oauth.yml
@@ -19,8 +19,10 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: oauth2-proxy
-          servicePort: 4180
+          service:
+            name: oauth2-proxy
+            port:
+              number: 4180
         path: /oauth2
 ---
 apiVersion: networking.k8s.io/v1
@@ -52,5 +54,8 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: prometheus-tls-service
-          servicePort: 9090
+          service:
+            name: prometheus-tls-service
+            port:
+              number: 9090
+
