Adds required missing pathType field to Ingresses

--- a/k8s/prometheus-federation/services/alertmanager-tls-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-service.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: '9093'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9093"
   name: alertmanager-tls-service
   namespace: default
 spec:
@@ -29,7 +29,7 @@ metadata:
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: nginx
   tls:
   - hosts:
     - alertmanager.{{GCLOUD_PROJECT}}.measurementlab.net
@@ -39,6 +39,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: alertmanager-tls-service
