--- a/k8s/prometheus-federation/services/gmx-tls-service.yml
+++ b/k8s/prometheus-federation/services/gmx-tls-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/scrape: 'true'
+    prometheus.io/scrape: "true"
   name: gmx-tls-service
   namespace: default
 spec:
@@ -25,7 +25,7 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: nginx
   tls:
   - hosts:
     - gmx.{{GCLOUD_PROJECT}}.measurementlab.net
@@ -35,6 +35,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: gmx-tls-service
