Updates cert-manager to most recent version (v1.8.0) (#906)
* Installs cert-manager using Helm

The cert-manager version running prometheus-federation is hopelessly
old, and is installed using static manifests. This commit removes all
those old static manifests, and instead installs the current version of
cert-manager using Helm.

* Uses proper path to helm binary

* Adds cert-manager ClusterIssuers for letsencrypt

* Sets default ClusterIssuer name and kind

* Renames ClusterIssuers with suffix of .yml (not .yaml)

* Moves applying templates as the final step

There are some static manifests that depend on things installed by helm,
so this commit moves apply global static manifests and resources as the
very last step. Namely, helm installs cert-manager, which automatically
creates the necessary CRDs for cert-manager. There are ClusterIssuer
static manifests that depend on those CRDs, and applying those
ClusterIssuer manifests will fail if the CRDs do not exist.

* Appends -oauth to Secret names for OAuth2 Ingresses

cert-manager will complain if we request a certificate for two different
Ingress resources that share a Secret name. It will log this message:

> certificate resource is not owned by this object. refusing to update
> non-owned certificate resource for object # Please enter the commit
> message for your changes. Lines starting

For oauth redirect Ingresses, this commit appends "-oauth" to the end of
the secretName.

* Updates Ingress resource API versions

This also entailed removing a deprecated annotation in favor of the new
ingressClassName field in the spec.

* Properly specifies Ingress backend services

The backend Ingress services were not properly specified for the updated
API version.

* Adds required missing pathType field to Ingresses

* Switches ClusterIssuer depending on project

In mlab-sandbox we want to use the LetsEncrypt staging ACME server. This
commit should cause sandbox to use the L

--- a/k8s/prometheus-federation/services/grafana-tls-oauth.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-oauth.yml
@@ -1,36 +1,38 @@
 # This Ingress makes sure oauth2-proxy intercepts requests going to the /oauth2
 # path. This path *must not* be protected with oauth, to prevent a redirection
 # loop when the application redirects to it to authenticate the user.
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana-tls-oauth
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - grafana.{{GCLOUD_PROJECT}}.measurementlab.net
-    secretName: grafana-tls
+    secretName: grafana-tls-oauth
   rules:
   - host: grafana.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
-      - backend:
-          serviceName: oauth2-proxy
-          servicePort: 4180
-        path: /oauth2
+      - path: /oauth2
+        pathType: Prefix
+        backend:
+          service:
+            name: oauth2-proxy
+            port:
+              number: 4180
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana-tls
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
     # Set authentication URL and sign-in URL for OAuth.
     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
@@ -42,6 +44,7 @@ metadata:
       proxy_set_header X-User  $user;
       proxy_set_header X-Email $email;
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - grafana.{{GCLOUD_PROJECT}}.measurementlab.net
@@ -51,6 +54,10 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: grafana-tls-service
-          servicePort: 3000
+          service:
+            name: grafana-tls-service
+            port:
+              number: 3000
+
