--- a/k8s/prometheus-federation/services/alertmanager-tls-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-service.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: '9093'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9093"
   name: alertmanager-tls-service
   namespace: default
 spec:
@@ -18,18 +18,18 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alertmanager-tls
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - alertmanager.{{GCLOUD_PROJECT}}.measurementlab.net
@@ -39,6 +39,10 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: alertmanager-tls-service
-          servicePort: 9093
+          service:
+            name: alertmanager-tls-service
+            port:
+              number: 9093
+
