--- a/k8s/prometheus-federation/services/gmx-tls-service.yml
+++ b/k8s/prometheus-federation/services/gmx-tls-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/scrape: 'true'
+    prometheus.io/scrape: "true"
   name: gmx-tls-service
   namespace: default
 spec:
@@ -17,15 +17,15 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gmx-tls
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - gmx.{{GCLOUD_PROJECT}}.measurementlab.net
@@ -35,7 +35,10 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: gmx-tls-service
-          servicePort: 9999
+          service:
+            name: gmx-tls-service
+            port:
+              number: 9999
 
