Delete datasources during provisioning

--- a/config/federation/grafana/provisioning/datasources/deleted.yml
+++ b/config/federation/grafana/provisioning/datasources/deleted.yml
@@ -15,3 +15,10 @@ deleteDatasources:
     orgId: 1
   - name: Downloader (mlab-sandbox)
     orgId: 1
+
+  - name: Data Proc (mlab-oti)
+    orgId: 1
+  - name: Data Proc (mlab-staging)
+    orgId: 1
+  - name: Data Proc (mlab-sandbox)
+    orgId: 1
