Uses --dry-run=client instead of deprecated --dry-run
Also, installs apache2-utils to get required utility htpasswd.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -109,7 +109,7 @@ steps:
     export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
     # Install any other needed system packages
-    apt install -y jq
+    apt install -y apache2-utils jq
 
     # Check alert and recording rules
     promtool check rules ./config/federation/prometheus/alerts.yml
