--- a/k8s/prometheus-federation/roles/cloud-build.yml.template
+++ b/k8s/prometheus-federation/roles/cloud-build.yml.template
@@ -16,9 +16,8 @@ metadata:
   name: cloud-build-deployer
 subjects:
 - kind: User
-  name: 581276032543@cloudbuild.gserviceaccount.com
+  name: {{PROJECT_NUMBER}}@cloudbuild.gserviceaccount.com
 roleRef:
   kind: ClusterRole
   name: cloud-build-deployer
   apiGroup: rbac.authorization.k8s.io
-
