--- a/k8s/prometheus-federation/roles/cloud-build.yml.template
+++ b/k8s/prometheus-federation/roles/cloud-build.yml.template
@@ -1,3 +1,14 @@
+# These RBAC configs were necessary to get builds of prometheus-support working
+# correctly in Cloud Build. See this for more information:
+#
+# https://cloud.google.com/kubernetes-engine/docs/how-to/role-based-access-control#permission_to_create_or_update_roles_and_role_bindings
+#
+# Addtionally, theses IAM permissions were added to the
+# cloud-kubernetes-deployer custom role:
+#
+# * container.validatingWebhookConfigurations.update
+# * container.mutatingWebhookConfigurations.update
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
