Adds new prometheus-federation "bootstrap" script
Also:

* Replaces a static reference to "mlab-sandbox" with $PROJECT
* Fixes a grammar issue in a comment in the README

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -95,7 +95,7 @@ steps:
       local cluster=$1
       gcloud container clusters list --filter "name=${cluster}" \
         --format="value(location)" \
-        --project mlab-sandbox
+        --project $PROJECT
     }
 
     # Install Go
